// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Seo /> should render blog post SEO 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "lang": "fi",
  },
  "linkTags": [
    {
      "href": "https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/",
      "rel": "canonical",
    },
  ],
  "metaTags": [
    {
      "content": "Kirkkonummi, Länsi-Uusimaa, kuntavaalit, aluevaalit, Vihreät, Lauri Lavanti, Lauri, Lavanti, poliitikko",
      "name": "keywords",
    },
    {
      "content": "Mitä jos terveyskeskusta ei olisikaan?",
      "property": "og:title",
    },
    {
      "content": "laurilavanti",
      "name": "author",
    },
    {
      "content": "fi_FI",
      "name": "og:locale",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "name": "description",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "property": "og:description",
    },
    {
      "content": "https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/",
      "name": "og:url",
    },
    {
      "content": "Lauri Lavanti",
      "name": "og:site_name",
    },
    {
      "content": "Mitä jos terveyskeskusta ei olisikaan?",
      "name": "twitter:title",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:site",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:creator",
    },
    {
      "content": "https://www.facebook.com/laurilavanti",
      "name": "article:publisher",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "name": "twitter:description",
    },
    {
      "content": "https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg",
      "property": "og:image",
    },
    {
      "content": "4032",
      "property": "og:image:width",
    },
    {
      "content": "1728",
      "property": "og:image:height",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [
    {
      "innerHTML": "{"@context":"https://schema.org","@type":"BlogPosting","author":{"@type":"Person","name":"laurilavanti"},"description":"Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?","headline":"Mitä jos terveyskeskusta ei olisikaan?","url":"https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/","image":"https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg","dateModified":"2021-11-15","datePublished":"2021-11-15","mainEntityOfPage":{"@id":"https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/","@type":"WebPage"}}",
      "type": "application/ld+json",
    },
  ],
  "styleTags": [],
  "title": "Mitä jos terveyskeskusta ei olisikaan? | Lauri Lavanti",
  "titleAttributes": {},
}
`;

exports[`<Seo /> should render borken home page SEO 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "lang": "fi",
  },
  "linkTags": [
    {
      "href": "https://laurilavanti.fi/",
      "rel": "canonical",
    },
  ],
  "metaTags": [
    {
      "content": "Kirkkonummi, Länsi-Uusimaa, kuntavaalit, aluevaalit, Vihreät, Lauri Lavanti, Lauri, Lavanti, poliitikko",
      "name": "keywords",
    },
    {
      "content": "Lauri Lavanti",
      "property": "og:title",
    },
    {
      "content": "laurilavanti",
      "name": "author",
    },
    {
      "content": "fi_FI",
      "name": "og:locale",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "description",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "property": "og:description",
    },
    {
      "content": "https://laurilavanti.fi/",
      "name": "og:url",
    },
    {
      "content": "Lauri Lavanti",
      "name": "og:site_name",
    },
    {
      "content": "Lauri Lavanti",
      "name": "twitter:title",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:site",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:creator",
    },
    {
      "content": "https://www.facebook.com/laurilavanti",
      "name": "article:publisher",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "twitter:description",
    },
    {
      "content": "https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg",
      "property": "og:image",
    },
    {
      "content": "4032",
      "property": "og:image:width",
    },
    {
      "content": "1728",
      "property": "og:image:height",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [
    {
      "innerHTML": "{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"laurilavanti"},"description":"Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.","headline":"Lauri Lavanti","url":"https://laurilavanti.fi/","image":"https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"}",
      "type": "application/ld+json",
    },
  ],
  "styleTags": [],
  "title": "Lauri Lavanti",
  "titleAttributes": {},
}
`;

exports[`<Seo /> should render edited blog post SEO 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "lang": "fi",
  },
  "linkTags": [
    {
      "href": "https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/",
      "rel": "canonical",
    },
  ],
  "metaTags": [
    {
      "content": "Kirkkonummi, Länsi-Uusimaa, kuntavaalit, aluevaalit, Vihreät, Lauri Lavanti, Lauri, Lavanti, poliitikko",
      "name": "keywords",
    },
    {
      "content": "Mitä jos terveyskeskusta ei olisikaan?",
      "property": "og:title",
    },
    {
      "content": "laurilavanti",
      "name": "author",
    },
    {
      "content": "fi_FI",
      "name": "og:locale",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "name": "description",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "property": "og:description",
    },
    {
      "content": "https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/",
      "name": "og:url",
    },
    {
      "content": "Lauri Lavanti",
      "name": "og:site_name",
    },
    {
      "content": "Mitä jos terveyskeskusta ei olisikaan?",
      "name": "twitter:title",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:site",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:creator",
    },
    {
      "content": "https://www.facebook.com/laurilavanti",
      "name": "article:publisher",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?",
      "name": "twitter:description",
    },
    {
      "content": "https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg",
      "property": "og:image",
    },
    {
      "content": "4032",
      "property": "og:image:width",
    },
    {
      "content": "1728",
      "property": "og:image:height",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
    {
      "content": "koira",
      "name": "kissa",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [
    {
      "innerHTML": "{"@context":"https://schema.org","@type":"BlogPosting","author":{"@type":"Person","name":"laurilavanti"},"description":"Mitä jos Jorvin ensiapu olisi koko läntisen Uudenmaan ainoa päivystys? Mitä jos Jorvissa pitäisi aina jonottaa monta tuntia?","headline":"Mitä jos terveyskeskusta ei olisikaan?","url":"https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/","image":"https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg","dateModified":"2021-12-15","datePublished":"2021-11-15","mainEntityOfPage":{"@id":"https://laurilavanti.fi/blogi/2021/11/15/mita-jos-terveyskeskusta-ei-olisikaan/","@type":"WebPage"}}",
      "type": "application/ld+json",
    },
  ],
  "styleTags": [],
  "title": "Mitä jos terveyskeskusta ei olisikaan? | Lauri Lavanti",
  "titleAttributes": {},
}
`;

exports[`<Seo /> should render home page SEO 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "lang": "fi",
  },
  "linkTags": [
    {
      "href": "https://laurilavanti.fi/",
      "rel": "canonical",
    },
  ],
  "metaTags": [
    {
      "content": "Kirkkonummi, Länsi-Uusimaa, kuntavaalit, aluevaalit, Vihreät, Lauri Lavanti, Lauri, Lavanti, poliitikko",
      "name": "keywords",
    },
    {
      "content": "Lauri Lavanti",
      "property": "og:title",
    },
    {
      "content": "laurilavanti",
      "name": "author",
    },
    {
      "content": "fi_FI",
      "name": "og:locale",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "description",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "property": "og:description",
    },
    {
      "content": "https://laurilavanti.fi/",
      "name": "og:url",
    },
    {
      "content": "Lauri Lavanti",
      "name": "og:site_name",
    },
    {
      "content": "Lauri Lavanti",
      "name": "twitter:title",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:site",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:creator",
    },
    {
      "content": "https://www.facebook.com/laurilavanti",
      "name": "article:publisher",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "twitter:description",
    },
    {
      "content": "https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg",
      "property": "og:image",
    },
    {
      "content": "4032",
      "property": "og:image:width",
    },
    {
      "content": "1728",
      "property": "og:image:height",
    },
    {
      "content": "summary_large_image",
      "name": "twitter:card",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [
    {
      "innerHTML": "{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"laurilavanti"},"description":"Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.","headline":"Lauri Lavanti","url":"https://laurilavanti.fi/","image":"https://laurilavanti.fihttps://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg","name":"Lauri Lavanti","sameAs":["https://www.facebook.com/laurilavanti","https://twitter.com/laurilavanti","https://www.instagram.com/laurilavanti/","https://www.linkedin.com/in/lapanti","https://mastodontti.fi/@laurilavanti","https://bsky.app/profile/laurilavanti.fi"]}",
      "type": "application/ld+json",
    },
  ],
  "styleTags": [],
  "title": "Lauri Lavanti",
  "titleAttributes": {},
}
`;

exports[`<Seo /> should render minimal SEO 1`] = `
{
  "baseTag": [],
  "bodyAttributes": {},
  "defer": true,
  "encode": true,
  "htmlAttributes": {
    "lang": "fi",
  },
  "linkTags": [],
  "metaTags": [
    {
      "content": "Kirkkonummi, Länsi-Uusimaa, kuntavaalit, aluevaalit, Vihreät, Lauri Lavanti, Lauri, Lavanti, poliitikko",
      "name": "keywords",
    },
    {
      "content": "Lauri Lavanti",
      "property": "og:title",
    },
    {
      "content": "laurilavanti",
      "name": "author",
    },
    {
      "content": "fi_FI",
      "name": "og:locale",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "description",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "property": "og:description",
    },
    {
      "content": "https://laurilavanti.fi",
      "name": "og:url",
    },
    {
      "content": "Lauri Lavanti",
      "name": "og:site_name",
    },
    {
      "content": "Lauri Lavanti",
      "name": "twitter:title",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:site",
    },
    {
      "content": "@laurilavanti",
      "name": "twitter:creator",
    },
    {
      "content": "https://www.facebook.com/laurilavanti",
      "name": "article:publisher",
    },
    {
      "content": "website",
      "property": "og:type",
    },
    {
      "content": "Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.",
      "name": "twitter:description",
    },
    {
      "content": "summary",
      "name": "twitter:card",
    },
  ],
  "noscriptTags": [],
  "onChangeClientState": [Function],
  "scriptTags": [
    {
      "innerHTML": "{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"laurilavanti"},"description":"Kirkkonummelainen isä, ohjelmistokehittäjä, diplomi-insinööri, Lauri Lavanti.","headline":"Lauri Lavanti","url":null,"name":"Lauri Lavanti","sameAs":["https://www.facebook.com/laurilavanti","https://twitter.com/laurilavanti","https://www.instagram.com/laurilavanti/","https://www.linkedin.com/in/lapanti","https://mastodontti.fi/@laurilavanti","https://bsky.app/profile/laurilavanti.fi"]}",
      "type": "application/ld+json",
    },
  ],
  "styleTags": [],
  "title": "Lauri Lavanti",
  "titleAttributes": {},
}
`;
